:apple: Fixing chat font too small (fix #1016)

--- a/src/resources/css/common/Chat.css
+++ b/src/resources/css/common/Chat.css
@@ -55,7 +55,7 @@ ChatPanel #toolButtonMinus
 
 ChatMessagePanel #labelUserName /* chat message author */
 {
-    font-size: 7.5pt;
+    font-size: 10px;
     font-weight: bold;
     margin: 0px;
 }
